# loom

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.cursor/rules/: http-layer.mdc  project.mdc  rust-gpui.mdc
assets/: AppIcon.icns
docs/: ARCHITECTURE.md  ENVIRONMENTS.md
fixtures/personal-workspace/: variables.yml  workspace.yml
fixtures/personal-workspace/collections/demo-api/: collection.yml  get-users.yml
fixtures/personal-workspace/collections/demo-api/environments/: JSONPlaceholder.yml
fixtures/personal-workspace/collections/demo-api/user-endpoints/: create-post.yml  folder.yml  get-user.yml
fixtures/personal-workspace/environments/: Production.yml  Staging.yml
script/: bundle-mac
src/: main.rs
src/app/: app_state.rs  autosave.rs  collection_import.rs  collections.rs  dispatch.rs  editor.rs  field_tables.rs  grpc.rs  init.rs  menus.rs  mod.rs  startup.rs  tab.rs  tab_actions.rs  url_sync.rs  variable_hover.rs  workspace.rs  workspace_binding.rs  workspace_storage.rs
src/app/ui/: curl.rs  fields.rs  mod.rs  rename.rs  request.rs  response.rs  settings.rs  sidebar.rs  tab_bar.rs  url_bar.rs
src/app/ui/environment/: mod.rs  scope_variables.rs  variables.rs  variables_panel.rs
src/app/ui/environment/manager/: mod.rs  panel.rs  render.rs
src/demo/: mod.rs
src/domain/: body_format.rs  curl.rs  demo.rs  environment.rs  fields.rs  grpc.rs  id.rs  mod.rs  request.rs  response.rs  timing.rs  url.rs  variable.rs  workspace.rs
src/import/: mod.rs  opencollection.rs  postman.rs  shared.rs
src/scripting/: context.rs  host.rs  mod.rs  response.rs  runtime.rs  tests.rs
src/storage/: app_state.rs  bootstrap.rs  local.rs  mod.rs  paths.rs  repair.rs
src/storage/yaml/: types.rs
src/transport/: grpc.rs  http.rs  mod.rs  runtime.rs
