[package]
name = "api-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "font-kit",
] }
gpui-component = { path = "../gpui-component/crates/ui", features = [
    "tree-sitter-html",
] }
gpui-component-assets = { path = "../gpui-component/crates/assets" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "multipart",
    "stream",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
xmltree = "0.12.0"
