[package]
name = "loom"
version = "0.1.0"
edition = "2024"
license = "MIT"

[package.metadata.bundle]
name = "Loom"
identifier = "dev.loom.app"
icon = ["assets/AppIcon.icns"]
osx_minimum_system_version = "10.15.7"
category = "Developer Tool"
short_description = "Desktop HTTP client for macOS"

[dependencies]
anyhow = "1"
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "font-kit",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "063e55bbc4fb13907a988111e3581595cbcaefde", features = [
    "tree-sitter-html",
    "tree-sitter-javascript",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "063e55bbc4fb13907a988111e3581595cbcaefde", package = "gpui-component-assets" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "multipart",
    "stream",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen"] }
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
lsp-types = { version = "0.97", features = ["proposed"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
xmltree = "0.12.0"
boa_engine = "0.21.1"
boa_gc = "0.21.1"
